--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,34 @@ body {
 .layout {
   margin-right: 0;
 }
+@media screen and (min-width: 1600px) {
+  .layout {
+    width: 70%;
+    margin: auto;
+  }
+}
+@media screen and (min-width: 1800px) {
+  div.jumbotron p {
+    font-size: 18px;
+  }
+  div.jumbotron h3 {
+    font-size: 30px;
+  }
+  div.jumbotron h1 {
+    font-size: 45px;
+  }
+}
+@media screen and (min-width: 2200px) {
+  div.jumbotron p {
+    font-size: 20px;
+  }
+  div.jumbotron h3 {
+    font-size: 37px;
+  }
+  div.jumbotron h1 {
+    font-size: 50px;
+  }
+}
 .loader {
   position: fixed;
   border: 14px solid #f3f3f3;
@@ -81,9 +109,26 @@ a:hover {
 .light-gray-btn:hover {
   background-color: rgb(150, 150, 150) !important;
 }
+@media screen and (min-width: 1700px) {
+  .light-gray-btn {
+    font-size: 20px;
+  }
+}
+@media screen and (min-width: 2400px) {
+  .light-gray-btn {
+    font-size: 25px;
+  }
+}
 .news-preview .card-body .card-text {
   overflow: hidden;
   font-size: 1rem;
   line-height: 1.5rem;
   max-height: 4.5rem;
+}
+.news-author {
+  color: #6c757d;
+}
+.news-author:hover {
+  text-decoration: underline;
+  color: #000;
 }
